cpp/grade-school/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.012s
user	0m0.002s
sys	0m0.009s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
[ 25%] Building CXX object CMakeFiles/grade-school.dir/grade_school_test.cpp.o
[ 50%] Building CXX object CMakeFiles/grade-school.dir/grade_school.cpp.o
[ 75%] Building CXX object CMakeFiles/grade-school.dir/test/tests-main.cpp.o
[100%] Linking CXX executable grade-school
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
[100%] Built target grade-school
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
===============================================================================
All tests passed (8 assertions in 8 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
[100%] Built target test_grade-school
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/grade-school.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/grade-school.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)27434"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
grade_school.cpp                               7       7   100%   
grade_school.h                                 1       1   100%   
grade_school_test.cpp                         57      57   100%   
test/catch.hpp                                64      37    57%   1448-1450,1580-1581,1628,1630,1642-1643,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2301-2302,2560
------------------------------------------------------------------------------
TOTAL                                        129     102    79%
------------------------------------------------------------------------------
lines: 79.1% (102 out of 129)
branches: 39.0% (106 out of 272)

real	0m9.976s
user	0m9.248s
sys	0m0.700s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.186s
user	0m0.140s
sys	0m0.047s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.205s
user	0m0.144s
sys	0m0.065s

===============================================================================

Running: clang-format-16 -style=file -i ./grade_school.cpp ./grade_school_test.cpp ./grade_school.h

real	0m0.022s
user	0m0.009s
sys	0m0.013s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./grade_school.cpp ./grade_school_test.cpp ./grade_school.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/grade_school.h:4:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/grade_school.h.

real	0m4.097s
user	0m3.922s
sys	0m0.173s


real	0m4.099s
user	0m3.924s
sys	0m0.173s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
23004 warnings generated.
60006 warnings generated.
60006 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/grade_school.h.
Suppressed 60012 warnings (60006 in non-user code, 6 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m12.860s
user	0m12.648s
sys	0m0.209s
Running: clang-tidy-16 ./grade_school.cpp ./grade_school_test.cpp ./grade_school.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/grade-school/grade_school.h:4:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~


real	0m12.862s
user	0m12.649s
sys	0m0.211s

===============================================================================

